tests/snapshots/run_wpt_conformance__coreml_gatherND_float32_2D_input_and_2D_out-of-bounds_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherND.https.any.js gatherND float32 2D input and 2D out-of-bounds indices, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: gatherND

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherNDInput: f32[16, 1];
  }

  consts {
    operand_0: i32[2, 1] @bytes([16, 0, 0, 0, 20, 0, 0, 0]);
  }

  nodes {
    [gatherNDOutput] = gatherND(gatherNDInput, operand_0, label="");
  }

  outputs { gatherNDOutput; }
}
