tests/snapshots/run_wpt_conformance__coreml_gatherND_float32_4D_input_and_1D_maximum_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherND.https.any.js gatherND float32 4D input and 1D maximum indices, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: gatherND

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherNDInput: f32[2, 2, 2, 2];
  }

  consts {
    operand_0: i32[3] @bytes([1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0]);
  }

  nodes {
    [gatherNDOutput] = gatherND(gatherNDInput, operand_0, label="");
  }

  outputs { gatherNDOutput; }
}
