tests/snapshots/run_wpt_conformance__coreml_gatherND_float32_rank-5_input_and_rank-5_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherND.https.any.js gatherND float32 rank-5 input and rank-5 indices, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: gatherND

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherNDIndices: i32[1, 1, 1, 1, 1];
    gatherNDInput: f32[2, 2, 2, 2, 2];
  }

  nodes {
    [gatherNDOutput] = gatherND(gatherNDInput, gatherNDIndices, label="");
  }

  outputs { gatherNDOutput; }
}
